<resources>
    <string name="app_name">learn</string>

    <string name="interview">面试</string>

    <string name="java">Java</string>
    <string name="collection">Collection</string>
    <string name="reflect">Reflect</string>
    <string name="deadlock">DeadLock</string>
    <string name="static_deadlock">StaticDeadLock</string>
    <string name="dynamic_deadlock">DynamicDeadLock</string>
    <string name="object_deadlock">ObjectDeadLock</string>
    <string name="android">Android</string>

</resources>