<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.drelovey.provider.router.RouterPath" />

        <import type="com.drelovey.common.binding.listener.CommonBinding" />

        <variable
            name="vm"
            type="com.drelovey.common.base.viewmodel.EmptyViewModel" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/static_deadlock" />

        <Button
            android:id="@+id/bt_dynamic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dynamic_deadlock" />

        <Button
            android:id="@+id/bt_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/object_deadlock" />

    </LinearLayout>

</layout>